--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,6 @@ watchdog==4.0.0
 PyMuPDF==1.24.2
 python-Levenshtein==0.25.1
 nltk==3.8.1
+moviepy==1.0.3
+openai-whisper==20231117
+pyannote.audio==3.2.0
