--- a/webui/package.json
+++ b/webui/package.json
@@ -25,7 +25,7 @@
     "cmdk": "^1.0.0",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.372.0",
-    "next": "14.2.2",
+    "next": "^14.2.18",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
